se mejoro las imagenes

--- a/cuenta.html
+++ b/cuenta.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/img/LOGO.png" alt="" width="200" />
+          <img src="./img/LOGO.png" alt="" width="200" />
         </a>
 
         <button
@@ -62,13 +62,13 @@
       <div id="mainSlider" class="carousel-slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/slide1.png" class="d-block w-100" />
+            <img src="./img/slide1.png" class="d-block w-100" />
           </div>
           <div class="carousel-item">
-            <img src="/img/slide2.png" class="d-block w-100" />
+            <img src="./img/slide2.png" class="d-block w-100" />
           </div>
           <div class="carousel-item">
-            <img src="/img/slide3.png" class="d-block w-100" />
+            <img src="./img/slide3.png" class="d-block w-100" />
           </div>
         </div>
       </div>
@@ -108,9 +108,9 @@
      <!--Informacion-->
      <footer class="footer">
       <div class="social">
-          <img src="/img/redes/icono1.png" title="" >
-          <img src="/img/redes/icono2.png" title="" >
-          <img src="/img/redes/icono3.png" title="" >
+          <img src="./img/redes/icono1.png" title="" >
+          <img src="./img/redes/icono2.png" title="" >
+          <img src="./img/redes/icono3.png" title="" >
       </div>
       <p class="copy">Todos los derechos reservados a 4Patitas | 2021</p>
   </footer>
