--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     
     <section class="cartasAdopcion" >
           <div class="card" style="width: 18rem;">
-            <img src="/img/perro1.jpg" class="card-img-top" alt="perro abandonado">
+            <img src="./img/perro1.jpg" class="card-img-top" alt="perro abandonado">
             <div class="card-body">
               <h5 class="card-title">Chuletas</h5>
               <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -228,9 +228,9 @@
      <!--Informacion-->
     <footer class="footer_uno">
         <div class="social_uno">
-            <img src="/img/redes/icono1.png" title="" >
-            <img src="/img/redes/icono2.png" title="" >
-            <img src="/img/redes/icono3.png" title="" >
+            <img src="./img/redes/icono1.png" title="" >
+            <img src="./img/redes/icono2.png" title="" >
+            <img src="./img/redes/icono3.png" title="" >
         </div>
         <p class="copy_uno">Todos los derechos reservados a 4Patitas | 2021</p>
     </footer>
