--- a/adoptar.html
+++ b/adoptar.html
@@ -29,7 +29,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="/img/LOGO.png" alt="" width="200" />
+          <img src="./img/LOGO.png" alt="" width="200" />
         </a>
 
         <button
