--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     </main>
 
      <!--Informacion-->
-    <footer class="footer_uno">
-        <div class="social_uno">
+    <footer class="footer__uno">
+        <div class="social__uno">
             <img src="./img/redes/icono1.png" title="" >
             <img src="./img/redes/icono2.png" title="" >
             <img src="./img/redes/icono3.png" title="" >
