--- a/quienes.html
+++ b/quienes.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
       crossorigin="anonymous">
        <!--CSS-->
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/estilos.css">
       <!--FONT-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700&display=swap" 
       rel="stylesheet">
@@ -100,20 +100,20 @@
             </div>
 </section>
     
-    <div class="galeriaGrid">
-      <div class="fotoGaleria">
-        <div class="foto imagen1"></div>
-        <div class="foto imagen2"></div>
-        <div class="foto imagen3"></div>
-        <div class="foto imagen4"></div>
-        <div class="foto imagen5"></div>
-        <div class="foto imagen6"></div>
+    <div class="galeria__grid">
+      <div class="foto__galeria">
+        <div class="foto imagen__1"></div>
+        <div class="foto imagen__2"></div>
+        <div class="foto imagen__3"></div>
+        <div class="foto imagen__4"></div>
+        <div class="foto imagen__5"></div>
+        <div class="foto imagen__6"></div>
       </div>
     </div>
       
 <!--Informacion-->
-<footer class="footer">
-  <div class="social">
+<footer class="footer__uno">
+  <div class="social__uno">
       <img src="./img/redes/icono1.png" title="" >
       <img src="./img/redes/icono2.png" title="" >
       <img src="./img/redes/icono3.png" title="" >
