arreglo de secciones

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
      <!--Informacion-->
     <footer class="footer__uno">
         <div class="social__uno">
-            <img src="./img/redes/icono1.png" title="" >
-            <img src="./img/redes/icono2.png" title="" >
-            <img src="./img/redes/icono3.png" title="" >
+            <img class="img__social" src="./img/redes/icono1.png" title="" >
+            <img class="img__social" src="./img/redes/icono2.png" title="" >
+            <img class="img__social" src="./img/redes/icono3.png" title="" >
         </div>
         <p class="copy_uno">Todos los derechos reservados a 4Patitas | 2021</p>
     </footer>
