--- a/quienes.html
+++ b/quienes.html
@@ -76,9 +76,11 @@
       </div>
     </section>
 
-  <section class="quien2">
-    <div class="perrin2">
-          <p class="parraf3">
+    
+
+  <section class="quien__2">
+    <div class="perrin__2">
+          <p class="parraf__3">
             
             Fundacion 4 patitas es una organizacion sin fines de lucro que se 
             mantiene solo de recursos propios, de colaboradores, voluntarios y amigos.
