--- a/adoptar.html
+++ b/adoptar.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
       crossorigin="anonymous">
        <!--CSS-->
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/estilos.css">
       <!--FONT-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700&display=swap" 
       rel="stylesheet">
@@ -81,9 +81,9 @@
         <h2 class="main__title">¡ Elige a tu nuevo Compañero !</h2>
         
       </section>
-      <section class="quien2">
-        <div class="perrin2">
-              <p class="parraf2">
+      <section class="quien__2">
+        <div class="perrin__2">
+              <p class="parraf__2">
                Tú puedes hacer la diferencia y salvar una vida. Y, 
                como si eso no fuera suficiente, un perro
                te brinda mucha alegría y puede darte un nuevo propósito en la vida. 
