--- a/adoptar.html
+++ b/adoptar.html
@@ -183,13 +183,13 @@
         </div>
       </section>
     <!--Informacion-->
-    <footer class="footer">
-      <div class="social">
-          <img src="./img/redes/icono1.png" title="" >
-          <img src="./img/redes/icono2.png" title="" >
-          <img src="./img/redes/icono3.png" title="" >
+    <footer class="footer__uno">
+      <div class="social__uno">
+          <img class="img__social" src="./img/redes/icono1.png" title="" >
+          <img class="img__social" src="./img/redes/icono2.png" title="" >
+          <img class="img__social" src="./img/redes/icono3.png" title="" >
       </div>
-      <p class="copy">Todos los derechos reservados a 4Patitas | 2021</p>
+      <p class="copy_uno">Todos los derechos reservados a 4Patitas | 2021</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
   crossorigin="anonymous"></script>
