--- a/cuenta.html
+++ b/cuenta.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
       crossorigin="anonymous">
        <!--CSS-->
-      <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/estilos.css">
       <!--FONT-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700&display=swap" 
       rel="stylesheet">
@@ -106,13 +106,13 @@
   </div>
 
      <!--Informacion-->
-     <footer class="footer">
-      <div class="social">
-          <img src="./img/redes/icono1.png" title="" >
-          <img src="./img/redes/icono2.png" title="" >
-          <img src="./img/redes/icono3.png" title="" >
+     <footer class="footer__uno">
+      <div class="social__uno">
+          <img class="img__social" src="./img/redes/icono1.png" title="" >
+          <img class="img__social" src="./img/redes/icono2.png" title="" >
+          <img class="img__social" src="./img/redes/icono3.png" title="" >
       </div>
-      <p class="copy">Todos los derechos reservados a 4Patitas | 2021</p>
+      <p class="copy_uno">Todos los derechos reservados a 4Patitas | 2021</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
   crossorigin="anonymous"></script>
