--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="cont__error">
-      <h2>Pagina no encontrada</h2>
+      <h2>Pagina no Encontrada</h2>
       <h1>404</h1>
       <p>no se puede encontrar la pagina</p>
       <a href="index.html">Volver al inicio</a>
