--- a/registrate.html
+++ b/registrate.html
@@ -5,14 +5,11 @@
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1,
       maximum-scale=1,minimum-scale-1" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-      <!--seo-->
-      <meta name="description" content="fundacion 4 patitas se creo en 2019">
-      <meta name="keywords" content="adoptar,4 patitas,fundacion de perros">
       <!--BOSSTRAP-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
       crossorigin="anonymous">
        <!--CSS-->
-      <link rel="stylesheet" href="./css/estilos.css">
+      <link rel="stylesheet" href="./estilos/estilo.css">
       <!--FONT-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700&display=swap" 
       rel="stylesheet">
@@ -20,7 +17,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
    
-      <title>registrate</title>
+      <title>Patitas</title>
   </head>
 <body>
     <header>
@@ -29,7 +26,7 @@
     <nav class="navbar navbar-expand-sm navbar-dark" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./img/LOGO.png" alt="" width="200" />
+          <img src="/img/LOGO.png" alt="" width="200" />
         </a>
 
         <button
@@ -63,13 +60,13 @@
       <div id="mainSlider" class="carousel-slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/slide1.png" class="d-block w-100" />
+            <img src="/img/slide1.png" class="d-block w-100" />
           </div>
           <div class="carousel-item">
-            <img src="./img/slide2.png" class="d-block w-100" />
+            <img src="/img/slide2.png" class="d-block w-100" />
           </div>
           <div class="carousel-item">
-            <img src="./img/slide3.png" class="d-block w-100" />
+            <img src="/img/slide3.png" class="d-block w-100" />
           </div>
         </div>
       </div>
@@ -109,13 +106,13 @@
 </div>
 
     <!--Informacion-->
-    <footer class="footer__uno">
-      <div class="social__uno">
-          <img class="img__social" src="./img/redes/icono1.png" title="" >
-          <img class="img__social" src="./img/redes/icono2.png" title="" >
-          <img class="img__social" src="./img/redes/icono3.png" title="" >
+    <footer class="footer">
+      <div class="social">
+          <img src="/img/redes/icono1.png" title="" >
+          <img src="/img/redes/icono2.png" title="" >
+          <img src="/img/redes/icono3.png" title="" >
       </div>
-      <p class="copy_uno">Todos los derechos reservados a 4Patitas | 2021</p>
+      <p class="copy">Todos los derechos reservados a 4Patitas | 2021</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
   crossorigin="anonymous"></script>
