--- a/registrate.html
+++ b/registrate.html
@@ -5,11 +5,14 @@
       <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1,
       maximum-scale=1,minimum-scale-1" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <!--seo-->
+      <meta name="description" content="fundacion 4 patitas se creo en 2019">
+      <meta name="keywords" content="adoptar,4 patitas,fundacion de perros">
       <!--BOSSTRAP-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
       crossorigin="anonymous">
        <!--CSS-->
-      <link rel="stylesheet" href="./estilos/estilo.css">
+      <link rel="stylesheet" href="./css/style.css">
       <!--FONT-->
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,500;1,700&display=swap" 
       rel="stylesheet">
@@ -17,7 +20,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
    
-      <title>Patitas</title>
+      <title>registrate</title>
   </head>
 <body>
     <header>
