--- a/registrate.html
+++ b/registrate.html
@@ -63,13 +63,13 @@
       <div id="mainSlider" class="carousel-slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/img/slide1.png" class="d-block w-100" />
+            <img src="./img/slide1.png" class="d-block w-100" />
           </div>
           <div class="carousel-item">
-            <img src="/img/slide2.png" class="d-block w-100" />
+            <img src="./img/slide2.png" class="d-block w-100" />
           </div>
           <div class="carousel-item">
-            <img src="/img/slide3.png" class="d-block w-100" />
+            <img src="./img/slide3.png" class="d-block w-100" />
           </div>
         </div>
       </div>
