. en imagenes y arreglo de footer

--- a/adoptar.html
+++ b/adoptar.html
@@ -99,35 +99,35 @@
       <div class="carousel__container1">
     
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro1.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro1.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Poco yoyo, 4 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro2.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro2.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Martina, 8 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro5.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro5.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Chocolo, 7 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro1.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro1.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">julio bow, 5 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro6.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro6.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Chico Terry, 10 años </p>
           </div>
@@ -145,35 +145,35 @@
       <div class="carousel__container1">
     
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro5.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro5.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Chico toño, 10 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro1.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro1.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Tepo Tepo, 2 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro2.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro2.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Solitario, 5 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro6.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro6.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Cortachurro, 10 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="/img/perro2.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/perro2.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Chola lola, 8 años </p>
           </div>
