--- a/cuenta.html
+++ b/cuenta.html
@@ -106,11 +106,11 @@
   </div>
 
      <!--Informacion-->
-     <footer class="footer__uno">
-      <div class="social__uno">
-          <img class="img__social" src="./img/redes/icono1.png" title="" >
-          <img class="img__social" src="./img/redes/icono2.png" title="" >
-          <img class="img__social" src="./img/redes/icono3.png" title="" >
+     <footer class="footer">
+      <div class="social">
+          <img src="./img/redes/icono1.png" title="" >
+          <img src="./img/redes/icono2.png" title="" >
+          <img src="./img/redes/icono3.png" title="" >
       </div>
       <p class="copy_uno">Todos los derechos reservados a 4Patitas | 2021</p>
   </footer>
