cambios de textos e imagenes

--- a/adoptar.html
+++ b/adoptar.html
@@ -106,21 +106,21 @@
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro2.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/108956901_m.jpg" alt=""  />
           <div class="carousel-item__details1">
-            <p class="carousel-item__details--subtitle1">Martina, 8 años </p>
+            <p class="carousel-item__details--subtitle1">Lua y Lia 1 mes </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro5.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/11413768_m.jpg" alt=""  />
           <div class="carousel-item__details1">
-            <p class="carousel-item__details--subtitle1">Chocolo, 7 años </p>
+            <p class="carousel-item__details--subtitle1">Juancho, 7 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro1.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/28152735_m.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">julio bow, 5 años </p>
           </div>
@@ -145,30 +145,30 @@
       <div class="carousel__container1">
     
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro5.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/28244846_m.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Chico toño, 10 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro1.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/43347099_m.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Tepo Tepo, 2 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro2.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/54632063_m.jpg" alt=""  />
           <div class="carousel-item__details1">
             <p class="carousel-item__details--subtitle1">Solitario, 5 años </p>
           </div>
         </div>
   
         <div class="carousel-item1">
-          <img class="carousel-item__img1" src="./img/perro6.jpg" alt=""  />
+          <img class="carousel-item__img1" src="./img/77326769_m.jpg" alt=""  />
           <div class="carousel-item__details1">
-            <p class="carousel-item__details--subtitle1">Cortachurro, 10 años </p>
+            <p class="carousel-item__details--subtitle1">Luzmira, 10 años </p>
           </div>
         </div>
   
