--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <!--seo-->
       <meta name="description" content="fundacion 4 patitas se creo en 2019">
-      <meta name="keywords" content="adopciones, 4patitas,fundacion de perros">
+      <meta name="keywords" content="adopciones, maltrato animal ,fundacion de perros">
       <!--BOSSTRAP-->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
       crossorigin="anonymous">
@@ -29,8 +29,8 @@
    
     <nav class="navbar navbar-expand-sm navbar-dark" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="./img/LOGO.png" alt="4 patitas" width="200" />
+        <a class="navbar-brand" href="/index.html">
+          <img src="./img/LOGO.png" alt="fundacion" width="200" />
         </a>
 
         <button
@@ -128,8 +128,10 @@
         </div>    
 
         <div class="box__but">
-            <button type="button" class="boton__sel btn-danger"><i class="fas fa-search"></i>&nbsp;&nbsp;Buscar</button>
-        </div>
+          <a href="registrate.html">
+            <button type="button" class="boton__sel btn-danger"  ><i class="fas fa-search"></i>&nbsp;&nbsp;Buscar</button>
+          </a>  
+          </div>
     </div>
 
         <div class="butom__radio">
@@ -153,8 +155,9 @@
             <img src="./img/perro1.jpg" class="card-img-top" alt="perro abandonado">
             <div class="card-body">
               <h5 class="card-title">Chuletas</h5>
-              <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="/registrate.html" class="btn btn-danger"><i class="fas fa-paw" ></i>&nbsp;Adoptar</a>
+              <p class="cards-text">
+                Este guapo perruno color blanco con café, Tiene aprox cinco años de edad y está esperando una familia </p>
+              <a href="./cuenta.html" class="btn btn-danger"><i class="fas fa-paw" ></i>&nbsp;Adoptar</a>
             </div>
           </div>
         
@@ -162,17 +165,17 @@
             <img src="./img/perro2.jpg" class="card-img-top" alt="perro abandonado">
             <div class="card-body" class="tarjeta">
               <h5 class="card-title">Thor</h5>
-              <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="/registrate.html" class="btn btn-danger"><i class="fas fa-paw" ></i>&nbsp;Adoptar</a>
+              <p class="cards-text">Esta preciosura tiene poco más de un año de edad, hermoso pelaje muy tierno. Se lleva bien con niños,.</p>
+              <a href="./cuenta.html" class="btn btn-danger"><i class="fas fa-paw" ></i>&nbsp;Adoptar</a>
             </div>
           </div>
   
           <div class="card" style="width: 18rem;">
-            <img src="./img/perro6.jpg" class="card-img-top" alt="perro abandonado">
+            <img src="./img/28152735_m.jpg" class="card-img-top" alt="perro abandonado">
             <div class="card-body">
               <h5 class="card-title">Tuki</h5>
-              <p class="cards-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="/registrate.html" class="btn btn-danger"><i class="fas fa-paw" ></i>&nbsp;Adoptar</a>
+              <p class="cards-text">Tierno, dulce, inteligente, curioso y adaptable, le encanta que le hagan cariños y regalonear con las personas</p>
+              <a href="./cuenta.html" class="btn btn-danger"><i class="fas fa-paw" ></i>&nbsp;Adoptar</a>
             </div>
           </div>
         
@@ -180,27 +183,23 @@
     </section> 
 
     <section class="quien__uno">
-            <img class="imaperro__uno" src="./img/adoptado2.jpg" alt="quienes somos">
+            <img class="imaperro__uno" src="./img/adoptado3.jpg" alt="quienes somos">
               <p class="parraf__uno">
                 ¿QUIENES SOMOS?<br/><br/>
-                Lorem ipsum dolor sit 
-                Necessitatibus dolores eligendi cumque 
-                officiis quisquam vero veniam obcaecati 
-                nam nulla odio ea.Lorem ipsum dolor sit 
-                Necessitatibus dolores eligendi cumque 
-                officiis quisquam vero veniam obcaecati 
-                nam nulla odio eaLorem ipsum dolor sit   
-                Necessitatibus dolores eligendi cumque 
-                officiis quisquam vero veniam obcaecati
-                officiis quisquam vero veniam obcaecati 
-                nam nulla odio eaLorem ipsum dolor sit   
-                Necessitatibus dolores eligendi cumque 
-                officiis quisquam vero veniam obcaecati
-                officiis quisquam vero veniam obcaecati 
-                nam nulla odio eaLorem ipsum dolor sit   
-                Necessitatibus dolores eligendi cumque 
-                officiis quisquam vero veniam obcaecati 
-                nam nulla odio ea</p>
+                Somos una fundación protectora de animales legalmente 
+                constituida en Santiago de Chile, que surge de la necesidad 
+                de proteger a animales domésticos en situación de maltrato o 
+                abandono, y busca desarrollar una cultura de protección activa 
+                de la vida animal.En Fundación 4 Patitas estamos convencidos 
+                que para promover el rescate y adopción animal es necesario hacerse ver: 
+                salir a la calle, buscar instancias, encontrar nuevas vitrinas y generar 
+                instancias en donde nos demos a conocer, y potenciales familias conozcan 
+                a nuestros rescatados. Siempre estamos haciendo acciones que merecen ser 
+                conocidas. Conoce acá nuestras últimas iniciativas, rescates y logros 
+                conseguidos y que te queremos contar.
+
+
+               </p>
     </section>
 
     <div class="tit_titulo">
@@ -221,7 +220,7 @@
    
     <section class="titulos__mapa">
             <h2>Nos encontramos en</h2></br>
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3901.8744018255616!2d-77.03726188530837!3d-12.052161691463677!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8c86ee1e773%3A0x5a934f86f41f490b!2sRestaurante+Plaza+San+Mart%C3%ADn!5e0!3m2!1ses!2spe!4v1526171528511" width="90%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4712.612925433433!2d-70.48304786163689!3d-33.362696270977416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cb9d9a9741a5%3A0xbb92b83c7520728f!2sSantuario%20De%20La%20Naturaleza!5e0!3m2!1ses-419!2scl!4v1638407494848!5m2!1ses-419!2scl"width="90%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
     </main>
 
