puntos de las redes sociales

--- a/registrate.html
+++ b/registrate.html
@@ -111,9 +111,9 @@
     <!--Informacion-->
     <footer class="footer">
       <div class="social">
-          <img src="/img/redes/icono1.png" title="" >
-          <img src="/img/redes/icono2.png" title="" >
-          <img src="/img/redes/icono3.png" title="" >
+          <img src="./img/redes/icono1.png" title="" >
+          <img src="./img/redes/icono2.png" title="" >
+          <img src="./img/redes/icono3.png" title="" >
       </div>
       <p class="copy">Todos los derechos reservados a 4Patitas | 2021</p>
   </footer>
