arreglo exitoso de pagina404

--- a/404.html
+++ b/404.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8">
     <title>pagina no Encontrada</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+      crossorigin="anonymous">
   </head>
   <body>
     <div class="cont__error">
       <h2>Pagina no Encontrada</h2>
       <h1>404</h1>
       <p>no se puede encontrar la pagina</p>
-      <a href="index.html">Volver al inicio</a>
+      <a href="index.html">Volver al inicio&nbsp;&nbsp;<i class="fas fa-paw"></i></a>
     </div>
   </body>
 </html>
