correcciones enttrega final proyecto

--- a/cuenta.html
+++ b/cuenta.html
@@ -100,7 +100,7 @@
               </form>
           </div>
           <div class="register__inicio">
-              <a class="register__inicio_a" href="index.html">&nbsp;&nbsp;Inicia Sesión</a>
+              <a class="register__inicio_a" href="index.html">&nbsp;Inicia Sesión</a>
           </div>
       </section>
   </div>
